# cobot2

./: .gitignore  package.xml  setup.py
cobot2/: cal_position.py  detect_cal_pos_service.py  detection3_service.py  firebase_bridge_node.py  onrobot.py  realsense2.py  realsense3.py  robot_move4.py  robot_move_total.py  test.py  test_retain.py  test_retain1.py  yolo.py  yolo2.py  yolo_predict_camera.py  yolo_predict_test.py  yoloe_model_test1.py
resource/: class_name.json
